# csvmerge

./: README.md  pyproject.toml
data/: left.csv  right.csv
src/: csvmerge.py
