[tool.poetry]
name = "csvmerge"
version = "0.1.0"
description = "Utility to join two csv files"
authors = []


[tool.poetry.dependencies]
python = "^3.9.7"
click = "^8.0.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
